WSDL/SOAP Web Service example + JAXB example