@@ -156,7 +156,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.21.0</version>
                 <configuration>
-                    <argLine>--add-modules java.se.ee</argLine>
+                    <!--<argLine>&#45;&#45;add-modules java.se.ee</argLine>-->
                     <includes>
                         <include>**/Test*.java</include>
                         <include>**/*Test.java</include>
